# mlops_project_AliTheGreat_Fadykhazzaka

./: pyproject.toml
